# blog

./: .editorconfig  .gitignore  Makefile  README.md  compose.yaml
.claude/: settings.local.json
admin/: README.md  admin.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
admin/config/: gunicorn.conf.py
admin/controllers/: login_controller.py  post_controller.py  root_controller.py
admin/db/: database.py
admin/forms/: login.py  post.py
admin/models/: member.py  post.py
admin/templates/: detail.html  index.html  login.html
admin/templates/includes/: header.html  layout.html  macros.html
admin/templates/posts/: edit.html  index.html
app/: app.py  config.py  pyproject.toml
app/config/: gunicorn.conf.py
app/controllers/: root_controller.py  school_controller.py  web_controller.py
app/db/: database.py
app/scss/: about.scss  base.scss  main.scss  school.scss  web.scss
app/scss/layout/: about.scss  header.scss  post.scss
app/settings/: asset.py  filter.py
app/templates/: index.html
app/templates/include/: layout.html
app/templates/includes/: header.html  layout.html  post.html
app/templates/school/: index.html
app/templates/web/: index.html
common/: .env.example  config.py  filter.py  pyproject.toml
common/models/: category.py  member.py  post.py
docker/admin/: Dockerfile
docker/app/: Dockerfile
docker/tailwind/: Dockerfile
docker/web/: Dockerfile
etc/nginx/: blog-nginx.conf  nginx.conf
seeder/: README.md  pyproject.toml
seeder/imports/: import_category.py  import_post.py  setup_db.py
seedr/: README.md  all.sh  import_member.py  pyproject.toml  setup_db.py
seedr/imports/: import_category.py  import_post.py
terraform/: main.tf  variables.tf
