[project]
name = "admin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuu-ux", email = "yuugaehara@gmail.com" }
]
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "flask-admin>=1.6.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "wtforms>=3.2.1",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.41",
    "mysqlclient>=2.2.7",
    "bcrypt>=4.3.0",
    "markdown>=3.8",
    "markupsafe>=3.0.2",
    "bleach>=6.2.0",
    "python-dotenv>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.10",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/admin"]
