[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuu-ux", email = "yuugaehara@gmail.com" }
]
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "flask-assets>=2.1.0",
    "libsass>=0.23.0",
    "watchdog>=6.0.0",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-orm>=1.2.10",
    "mysql-connector-python>=9.2.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
