[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuu-ux", email = "yuugaehara@gmail.com" }
]
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "flask-assets>=2.1.0",
    "watchdog>=6.0.0",
    "python-dotenv>=1.0.1",
    "mysqlclient>=2.2.7",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.41",
    "requests>=2.32.3",
    "libsass>=0.23.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.10",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
