[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuu-ux", email = "yuugaehara@gmail.com" }
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.10",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
