[project]
name = "seedr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuu-ux", email = "yuugaehara@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.41",
    "flask-sqlalchemy>=3.1.1",
    "bcrypt>=4.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.10",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/seedr"]
